--- a/app/templates/portfolio/index.html
+++ b/app/templates/portfolio/index.html
@@ -19,4 +19,5 @@ Inicio
 </div>
 {%  include 'portfolio/section-first.html' %}
 {%  include 'portfolio/section-second.html' %}
+{%  include 'portfolio/section-third.html' %}
 {% endblock %}
