--- a/app/templates/portfolio/section-second.html
+++ b/app/templates/portfolio/section-second.html
@@ -3,7 +3,7 @@
 		<div class="padded">
 			<h1>Mira mis proyectos !</h1>
 		</div>
-		<div class="grids">
+		<div class="center grids">
 			<div class="proyect">
 				<h3>Primer Proyecto</h3>
 				<img src="{{url_for('static',filename='freelancer.png')}}"/>
@@ -28,16 +28,16 @@
 				<p>Un carrito de compras hecho con React</p>
 				<a class="orange" href="https://flourishing-empanada-cc7a39.netlify.app/">Link aqui</a>
 		    </div>
-		    <div class="proyect todo">
+		    <div class="proyect">
 				<h3>Todo App</h3>
-				<img src="{{url_for('static',filename='todo2.png')}}"/>
-				<p>Una app hecha con HTML y CSS, con Python en la parte del backend utilizando Flask y MySql en la parte de bases de datos</p>
+				<img src="{{url_for('static',filename='github.png')}}"/>
+				<p>Aplicacion FullStack, para la parte de frontend se utilizo HTML y CSS, mientras que para la parte de backend se utilizo Python, con el microframework Flask, se trabajo con bases de datos, una para el registro del usuario y otra ara el manejo de las tareas</p>
 				<a class="orange" href="https://github.com/jorgenico0105">Descarga en Github</a>
 		    </div>
-		    <div class="proyect mailer">
+		    <div class="proyect">
 				<h3>Mailer app</h3>
-				<img src="{{url_for('static',filename='mailer2.png')}}"/>
-				<p>Aplicacion para envio de correos, hecha con Flask, y Sendgrid</p>
+				<img src="{{url_for('static',filename='github.png')}}"/>
+				<p>Aplicacion FullStack, para la parte de frontend se utilizo HTML y CSS, mientras que para la parte de backend se utilizo Python, con el microframework Flask, se trabajo con bases de datos para los correos, y para su respectivo envio, usamos SendGrid.</p>
 				<a class="orange" href="https://github.com/jorgenico0105">Descargar en GitHub</a>
 		    </div>
 		</div>
