--- a/app/static/style.css
+++ b/app/static/style.css
@@ -141,9 +141,51 @@ a.button{
 .proyect p {
 	font-size: 18px;
 }
-.todo{
-	grid-column: 2 / 4;
+.contact-form input{
+	font-family: 'Rubik',sans-serif;
+	border: none;
+	height: 30px;
+	padding: 5px 10px;
+	margin-bottom:15px ;
+	border-radius: 5px;
+	width: calc(100% + 55px);
 }
-.mailer{
-	grid-column: 1 / 3;
+.contact-form textarea{
+	font-family: 'Rubik',sans-serif;
+	border: none;
+	height: 100px;
+	padding: 15px 10px;	
+	margin-bottom:10px ;
+	border-radius: 5px;
+	width: calc(100% + 55px);
+}
+.contact-form button{
+	margin-top: 0px;
+	width: calc(100% + 70px);
+}
+.full-width{
+	width: 100%;
+}
+.footer{
+	padding:80px 0 0 0;
+	background-color: #333;
+	color: #fff;
+}
+.social-links{
+	margin-top: 20px;
+	margin-bottom: 40px;
+}
+.social-links a{
+	margin: 0 10px;
+}
+
+.social{
+	background-color: #fff;
+	padding: 10px;
+	border-radius: 15px;
+
+}
+.made-with{
+	padding: 0 30px;
+	color:#555;
 }
